--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=0.9" />
+    <link rel="icon" href="https://cdn.discordapp.com/attachments/930785564377088000/934485214112141352/png-transparent-sperm-whale-computer-icons-baleen-whale-dead-fish-animals-logo-silhouette.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=0.75" />
     <title>Solana HODL Whales</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async id="gtag"></script>
